Archive2/ac/69ce5a16311f52/output
main.cpp: In function 'int main()':
main.cpp:24:37: error: expected ')' before ';' token
         vec.push_back(thread(foo, b);
                                     ^
